assingments/part3/exercise_302/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 8002
